--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
 </div>
 
-<div class="intro" id="home">
+<div class="intro" id="home" data-parallax="scroll" data-image-src="img/walpaper.jpg">
   <div class="intro-block">
     <h1 class="heading-large">Незабываемые впечатления!!!</h1>
     <iframe class="youtube" src="https://www.youtube.com/embed/Sp8SAicQoqc" frameborder="0" allowfullscreen></iframe>
@@ -190,5 +190,8 @@
 <!-- Script -->
 <script type="text/javascript" charset="utf-8" src="js/header.js"></script>
 <script type="text/javascript" charset="utf-8" src="js/carusel.js"></script>
+<script type="text/javascript" charset="utf-8" src="js/topnav.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="js/parallax.js-1.4.2/parallax.min.js"></script>
 </body>
 </html>
